tests/fixtures/flow/mermaid/negative/unknown_directive.mmd
%%{themeVariables: {'primaryColor': '#fff'}}%%
flowchart TD
A --> B
